Edit CRUD journal APIs